prusti-tests/tests/verify/ui/predicates/trait-impl-dont-call.stderr
error: [Prusti: invalid specification] using predicate from non-specification code is not allowed
  --> $DIR/trait-impl-dont-call.rs:30:5
   |
30 |     MyTrait::foo(&s);
   |     ^^^^^^^^^^^^
   |
note: this is a specification-only predicate function
  --> $DIR/trait-impl-dont-call.rs:5:9
   |
5  |         fn foo(&self) -> bool;
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: [Prusti: invalid specification] using predicate from non-specification code is not allowed
  --> $DIR/trait-impl-dont-call.rs:31:5
   |
31 |     s.foo();
   |     ^^^^^^^
   |
note: this is a specification-only predicate function
  --> $DIR/trait-impl-dont-call.rs:5:9
   |
5  |         fn foo(&self) -> bool;
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: [Prusti: invalid specification] using predicate from non-specification code is not allowed
  --> $DIR/trait-impl-dont-call.rs:32:5
   |
32 |     MyStruct::bar(&s);
   |     ^^^^^^^^^^^^^
   |
note: this is a specification-only predicate function
  --> $DIR/trait-impl-dont-call.rs:22:9
   |
22 | /         fn bar(&self) -> bool {
23 | |             true
24 | |         }
   | |_________^

error: [Prusti: invalid specification] using predicate from non-specification code is not allowed
  --> $DIR/trait-impl-dont-call.rs:33:5
   |
33 |     s.bar();
   |     ^^^^^^^
   |
note: this is a specification-only predicate function
  --> $DIR/trait-impl-dont-call.rs:22:9
   |
22 | /         fn bar(&self) -> bool {
23 | |             true
24 | |         }
   | |_________^

error: aborting due to 4 previous errors

